@@ -25,6 +25,7 @@ S3method(encoding,corpusSource)
 S3method(features,dfm)
 S3method(kwic,character)
 S3method(kwic,corpus)
+S3method(kwic,tokenizedTexts)
 S3method(lexdiv,dfm)
 S3method(lexdiv,numeric)
 S3method(ndoc,corpus)
@@ -112,6 +113,7 @@ export(encoding)
 export(features)
 export(is.corpus)
 export(is.dfm)
+export(is.tokenizedTexts)
 export(kwic)
 export(lexdiv)
 export(metacorpus)
