@@ -2,6 +2,7 @@
 % Please edit documentation in R/tokenize.R
 \name{tokenize}
 \alias{clean}
+\alias{is.tokenizedTexts}
 \alias{tokenise}
 \alias{tokenize}
 \alias{tokenize.character}
@@ -17,6 +18,8 @@ tokenize(x, ...)
   ...)
 
 \method{tokenize}{corpus}(x, ...)
+
+is.tokenizedTexts(x)
 }
 \arguments{
 \item{x}{The text(s) or corpus to be tokenized}
@@ -73,6 +76,8 @@ a \strong{tokenizedText} (S3) object, essentially a list of character
 }
 \description{
 Tokenize the texts from a character vector or from a corpus.
+
+\code{is.tokenizedTexts} returns \code{TRUE} if the object is of class tokenizedTexts, \code{FALSE} otherwise.
 }
 \details{
 The tokenizer is designed to be fast and flexible as well as to
